--- a/starter-code/tweet-clone.html
+++ b/starter-code/tweet-clone.html
@@ -8,6 +8,63 @@
   <title>HTML &amp; CSS | Ironhack PreWork |</title>
 </head>
 <body>
-
+<div class="tweet-box">
+  <div class="tweet-header">
+    <div class="image-user">
+      <img src="img/profile-picture.jpg" alt="user profile">
+    </div>
+    <div class="user">
+      <div class="user-name">
+        <div class="pre-user-name">
+          <img src="img/account-logo.jpg" alt="account-logo">
+        </div>
+        <div class="name">
+          jack
+        </div>
+        <div class="validated-name">
+          <img src="img/validated-account.jpg" alt="validated-account">
+        </div>
+      </div>
+      <div class="nickname">@jack
+      </div>
+    </div>
+    <div class="button">
+      <div class="button-logo">
+        <img src="img/twitter-logo.jpg" alt="twitter log">
+      </div>
+      <div class="button-text">
+        <p>Follow</p>
+      </div>
+    </div>
+    <div class="clear">
+    </div>
+  </div>
+  <div class="tweet-body">
+    <div class="body-message">just setting up my twtter
+    </div>
+    <div class="body-details">
+      <time>9:50 PM</time> - <time>21 Mar 2006</time>
+    </div>
+    <div class="clear">
+    </div>
+  </div>
+  <div class="clear">
+  </div>
+  <div class="tweet-footer">
+    <div class="reply">
+      <img src="img/reply.jpg" alt="reply">
+    </div>
+    <div class="retweet">
+      <img src="img/retweet.jpg" alt="retweet">  92,555
+    </div>
+    <div class="favorite">
+      <img src="img/favorite.jpg" alt="favorite">  71,111
+    </div>
+    <div class="clear">
+    </div>
+  </div>
+  <div class="clear">
+  </div>
+</div>
 </body>
 </html>
